# decision-engine-v1

./: .gitignore  AGENTS.md  DDR.md  NOTES.md  README.md  SPEC.md  decision_engine.db  pyproject.toml  skills-lock.json
backend/: README.md  alembic.ini
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/tests/: engine_admin_test_support.py  runtime_test_support.py  test_ai_client_factory.py  test_ai_gemini_client.py  test_ai_openai_client.py  test_ai_settings.py  test_auth.py  test_decision_engine_contracts.py  test_decision_engine_normalization.py  test_decision_engine_pipeline.py  test_decision_engine_pld_registration.py  test_decision_engine_pld_runtime.py  test_decision_engine_registry.py  test_decision_engine_runtime_definitions.py  test_evaluation_contract_mappers.py  test_health.py  test_issue_002_openapi.py  test_issue_013_consultations_api.py  test_migrations.py  test_models.py  test_observability.py  test_rbac.py  test_seed.py  test_settings.py
decision_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: DDR.md  SPEC.md
docs/analysis/: ISSUE-001.md  ISSUE-002.md  (+12 more)
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js
old-version/: .Rhistory  API_DB.db  ParametrosPLD-v3.xlsx  README.md  api-build-v2.R  api-build-v3.R  api-build.R  api-debug.R  bandeja.html  bandeja1.html  index.html  ip_authorized.txt  ip_evaluator.txt  ip_logs.txt  pagina1.html  script.js  solicitud.html  styles.css  test.html  test.txt  test2.txt
scripts/: frontend_init.py
(+233 files in other folders)
